# Abstract_VM

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ccpp.yml
inc/: AWM.hpp  CustomException.hpp  FOperand.hpp  IOperand.hpp  Lexer.hpp  Operand.hpp  Parser.hpp
src/: AWM.cpp  CustomException.cpp  FOperand.cpp  Lexer.cpp  Parser.cpp  main.cpp
test/: test8
tests/: CMakeLists.txt  example_add.cpp
